[gd_scene load_steps=19 format=2]

[ext_resource path="res://recursos/meteoro.png" type="Texture" id=1]
[ext_resource path="res://cenas/jogo/recursos/SpaceFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://recursos/sons/explosao_meteoro.ogg" type="AudioStream" id=3]
[ext_resource path="res://cenas/jogo/meteoros/Meteoro.gd" type="Script" id=4]
[ext_resource path="res://recursos/target.png" type="Texture" id=5]
[ext_resource path="res://recursos/meteoro_quebrar.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="Animation" id=2]
resource_name = "piscar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Mira:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.956191 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0392157, 0.45098, 0.0666667, 0.823529 ), Color( 0.0392157, 0.45098, 0.0666667, 0.392157 ), Color( 0.0392157, 0.45098, 0.0666667, 0.823529 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 12.0416

[sub_resource type="Animation" id=5]
resource_name = "destruir"
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "destroi_elementos"
}, {
"args": [  ],
"method": "libera"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fragmentos:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0588235 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fragmentos:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "rodar"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Meteoro:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "piscar"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.823529 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.823529 ) ]
}

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "explosao",
"speed": 15.0
} ]

[node name="Meteoro" type="Area2D"]
z_index = -1
script = ExtResource( 4 )

[node name="Meteoro" type="Sprite" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.823529 )
margin_left = -6.0
margin_top = -4.0
margin_right = 6.0
margin_bottom = 9.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Touch" type="TouchScreenButton" parent="."]
position = Vector2( -12, -10 )
shape = SubResource( 1 )

[node name="Mira" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0392157, 0.45098, 0.0666667, 0.823529 )
position = Vector2( 0, 2 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="AnimaMira" type="AnimationPlayer" parent="."]
autoplay = "piscar"
anims/piscar = SubResource( 2 )

[node name="Colisao" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 1.5 )
shape = SubResource( 3 )

[node name="AnimacaoDestruir" type="AnimationPlayer" parent="."]
anims/destruir = SubResource( 5 )

[node name="Rotacao" type="AnimationPlayer" parent="."]
autoplay = "rodar"
anims/rodar = SubResource( 6 )

[node name="Piscar" type="AnimationPlayer" parent="."]
autoplay = "piscar"
anims/piscar = SubResource( 7 )

[node name="ExplosaoMeteoro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Fragmentos" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 13 )
animation = "explosao"
frame = 3
[connection signal="pressed" from="Touch" to="." method="_on_Touch_pressed"]
